[package]
name = "dusk"
version = "0.1.0"
edition = "2021"
description = "Interactive disk usage analyzer with treemap & sunburst visualization for your terminal"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
humansize = "2"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
